make work in java 11